# advent-of-code

./: .gitignore
2015/01/: 01.py  01.rb  01.rkt  02.py  README.md
2018/: day01_2.py  day03_2.py  day04_1.py  day05_1.py  day06_1.py  day07_1.py  lib.py
2019/: ex1.py
2020/day01/: day01.txt
2020/day02/: day02p1.py  day02p2.py
2020/day03/: day03p1.py  day03p2.py
2020/day04/: day04p1.sql
2020/day05/: day05.py  day05p2.py  day05p2optim.py
2020/day06/: day06p1.py  day06p2.py
2020/day07/: day06p2.py
2020/day08/: sample.txt
2020/day10/: day10p1.py  day10p2.py  day10p2_sql.py
2020/day11/: day11p1-2.py
2020/day13/: day13p1.py  day13p2.py  p2-5.py
2020/day14/: day14p1.py
2022/: Cargo.toml  Makefile  index.html
2022/src/: main.rs
aoc2018/: day01_1.py  day02_1.py  day02_2.py  day03_1.py  day04_2.py  day05_2.py  day08_1.py
aoc2018/input/: day04
aoc2019/: ex2.py  ex3.py
aoc2020/day01/: day01p1.py  day01p2.py  day01p2.sql  day01p2_2.py
aoc2020/day02/: day02p1.sql  day02p2.sql
aoc2020/day04/: day04p1.py  day04p2.sql
aoc2020/day05/: day05_sql.py
aoc2020/day06/: day06p1.sql  day06p1_sqlite.py  day06p2.sql
aoc2020/day07/: day06p1.py
aoc2020/day08/: day08p1.py  day08p2.py
aoc2020/day09/: day09p1.py  day09p2.py  sample-25.txt  sample-5.txt
aoc2020/day11/: day11p1.py
aoc2020/day12/: day12p1.py  day12p2.py
aoc2020/day13/: day12p2-2.py  day13p1.py  p2-4.py
aoc2020/day14/: day14p1.py
aoc2020/day15/: day15p1.py  day15p2.py
aoc2020/day16/: day16p1.py  day16p1python.py  day16p2.py
aoc2020/day17/: day17p1.py  problem.md
(+11 files in other folders)
